Revision history for Git-Files

{{$NEXT}}

0.0.6  2022-11-23T13:03:01+01:00
    - Bump dependency on path-utils properly

0.0.5  2022-11-23T12:51:54+01:00
    - Bump dependency on path-utils to get in sync

0.0.4  2022-10-15T21:35:44+02:00
    - Bump dependency on path-utils to fix installation issues
      caused by failed tests

0.0.3  2022-09-27T20:58:19+02:00
    - Allow specification of files as well: these were effectively
      ignored before this
    - Bump dependency on path-utils to fix Windows issue
    - Fix deadlocking issue on larger repos

0.0.2  2022-09-20T12:38:39+02:00
    - Bump dependency on path-utils because we can

0.0.1  2022-09-19T12:33:43+02:00
    - Initial version